base/src/test/resources/failure/patterns/not-enough-pat.aya.txt
In file $FILE:4:14 ->

  2 | 
  3 | def ifElse {A : Type} (b : Bool) (x y : A) : A
  4 |  | true, x => x
                    ^^

Error: Unable to apply the expression
         x y
       because the type of what you applied is not a Pi type, but instead:
         A
         (Normalized: A)

1 error(s), 0 warning(s).
What are you doing?
